# Flight-Insight

./: README.md  package-lock.json
flight-insight/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
flight-insight/src/: app.d.ts  app.html  hooks.server.ts
flight-insight/src/lib/components/: A230Map.svelte  AmericanIcon.svelte  HumidityChart.svelte  ReportForm.svelte  TemperatureChart.svelte  TurbulenceChart.svelte  WeatherWidget.svelte
flight-insight/src/lib/server/: db.ts
flight-insight/src/lib/server/db/: init.ts
flight-insight/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
flight-insight/src/routes/api/humidity/: +server.ts
flight-insight/src/routes/api/liveData/: +server.ts
flight-insight/src/routes/api/passengerRequest/: +server.ts
flight-insight/src/routes/api/temperature/: +server.ts
flight-insight/src/routes/api/turbulence/: +server.ts
flight-insight/src/routes/dashboard/: +page.server.ts  +page.svelte
flight-insight/src/routes/flightcrew/: +page.server.ts  +page.svelte
flight-insight/src/routes/preflight/: +page.svelte
onboard-hardware/server/: analysis.py  main.py
onboard-hardware/turbulence_controller/: turbulence_controller.ino
utils/: locator.py
weather-scrape/: airports.py  delays.py  observations.py  pyproject.toml  stations.py
